Adicionada informações sobre a receita, alterado o estilo do app, corrigi função para carregar receitas, comentei requisição get

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "Blank Template",
-    "slug": "ReceitasDaVovo",
+    "slug": "15-minutes Recipes",
     "privacy": "public",
     "sdkVersion": "36.0.0",
     "platforms": [
