--- a/back-end/package.json
+++ b/back-end/package.json
@@ -10,8 +10,10 @@
   "author": "Lucas Lima",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^5.9.5"
+    "mongoose": "^5.9.5",
+    "mongoose-paginate": "^5.0.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
